"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-09-29	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-74-ACT-01-09:
	  AST/parse_options.h: namespace_instances -- switch to reject
		non-global namespace instance mamagement.  
	  AST/parse_context.cc: helper function to reject things
		that don't belong in non-global namespaces.
		Reject them when ACT dialect is selected.  
	  main/compile.cc: added dialect modifiers to options, documented.
	  Added bunch of new test cases, some quarantined until resolved.
	  Next: minor cleanup of parse_context::add_production_rules.


2007-09-27	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-74-ACT-01-08:
	  No source revision, only added test cases for export/connect.
		Still need bunch more export tests...
	  It seems ACT doesn't allow instances outside global namespace...
	  TODO: compiler flag to revert to old export-all behavior
	  TODO: document 'export' in language spec
	  TODO: preserve exportedness in definition_base::write/load, 
		print exportedness in object dumps.


2007-09-26	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-74-ACT-01-07:
	  Implemented 'export' semantics, I think.  
		Built-in definitions auto-exported.
	  Updated existing test-cases (inputs) accordinglyi, 
		added a few new ones.  
	  TODO: new batch of export tests, some from ACT.  
		To test: typedefs, prototypes, redeclarations, 
		parent/child namespaces


2007-09-25	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-74-ACT-01-06:
	  Massaged grammar to support optional export directive, 
		refactored prototype rules for ease of maintainence.  
	  Compile-fail tests updated to account for grammar updates
		for both yacc/bison.  
	  Next: update type-check pass to honor export directives
		and document in dox/lang.  

