@@ -3,7 +3,7 @@
 	Class methods for context object passed around during 
 	type-checking, and object construction.  
 	This file was "Object/art_context.cc" in a previous life.  
- 	$Id: parse_context.cc,v 1.17.10.2 2007/09/29 06:12:57 fang Exp $
+ 	$Id: parse_context.cc,v 1.17.10.3 2007/09/29 06:39:35 fang Exp $
  */
 
 #ifndef	__AST_PARSE_CONTEXT_CC__
@@ -82,7 +82,6 @@ context::context(module& m, const parse_options& o) :
 		current_prototype(NULL), 
 		current_fundamental_type(NULL), 
 		sequential_scope_stack(), 
-		top_prs(m.prs), 
 		loop_var_stack(), 
 		global_namespace(m.get_global_namespace()), 
 		strict_template_mode(true), 
@@ -134,7 +133,6 @@ context::context(const module& m, const parse_options& o, const bool _pub) :
 		current_prototype(NULL), 
 		current_fundamental_type(NULL), 
 		sequential_scope_stack(), 
-		top_prs(const_cast<entity::PRS::rule_set&>(m.prs)), // :S
 		loop_var_stack(), 
 		global_namespace(m.get_global_namespace()), 
 		strict_template_mode(true), 
@@ -1036,12 +1034,6 @@ void
 context::commit_definition_arity(void) {
 	INVARIANT(current_prototype);
 	current_prototype->commit_arity();
-}
-
-//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-void
-context::add_top_level_production_rule(excl_ptr<entity::PRS::rule>& r) {
-	top_prs.append_rule(r);
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
